--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
     <head>
         <title>Coadunate - Projects</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
         Web content here!
+        <div class="well">
+
+        </div>
     </body>
 </html>
