add nanopore-data-visualizer project

--- a/index.html
+++ b/index.html
@@ -3,12 +3,36 @@
     <head>
         <title>Coadunate - Projects</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/master.css">
+
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
-        Web content here!
-        <div class="well">
-
+      <div class="container">
+        <div class="col-lg-12">
+          <h1 class="text-left heading">Coadunate &mdash; <span class="text-muted italic subtitle"> united by growth</span></h1>
         </div>
+      </div>
+      <div class="container-fluid">
+        <div class="col-lg-12">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-11">
+            <div style="margin-top: 100px;"></div>
+            <div class="col-lg-1">
+              <h2>Projects:</h2>
+            </div>
+            <div class="col-lg-6">
+              <div class="run">
+
+              </div>
+              <div class="well text-left" style="margin-left: 20px;">
+                <a href="./ndv">Nanopore Data Visualizer (NDV)</a><br />
+                <i>{ more project on the way}</i>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
     </body>
 </html>
