--- a/ndv/demo/index.html
+++ b/ndv/demo/index.html
@@ -41,7 +41,8 @@
               .x(x)
               .xExtent([0,d3.max(data,function(d){ return d.time; })]) // this means that the x-axis can go at most from 0 to 500.
               .scaleExtent([1, 1000]) // this tells the scale how deep should it go (for example [1,100] only goes until nearest unit)
-              .on("zoom", zoomed);
+              .on("zoom", zoomed)
+              .scale(8,1);
 
           var svg = d3.select("body").append("svg")
               .attr("width", width + margin.left + margin.right)
