implementing new project flow

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  
                </div>
                <div class="well text-left" style="margin-left: 20px;">
-                 <a href="https://coadunate.github.io/nanopore-data-visualization/">Nanopore Data Visualizer (NDV)</a><br />
+                 <a href="./projects/ndv>Nanopore Data Visualizer (NDV)</a><br />
                  <i>{ more project on the way}</i>
                </div>
              </div>
