fix closing quotes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
          <title>Coadunate - Projects</title>
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
          <link rel="stylesheet" href="/css/master.css">
- 
+         <script src="http://code.jquery.com/jquery-latest.min.js"></script> 
          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
      </head>
      <body>
@@ -26,7 +26,7 @@
  
                </div>
                <div class="well text-left" style="margin-left: 20px;">
-                 <a href="./projects/ndv>Nanopore Data Visualizer (NDV)</a><br />
+                 <a href="./projects/ndv">Nanopore Data Visualizer (NDV)</a><br />
                  <i>{ more project on the way}</i>
                </div>
              </div>
